--- a/public/courses/regression2020/contentreg/index.html
+++ b/public/courses/regression2020/contentreg/index.html
@@ -689,26 +689,35 @@
 <li>
 <p>Residual analysis</p>
 </li>
-<li>
-<p>Test of significance of regression</p>
-</li>
-<li>
-<p>Tests on individual regression coefficients</p>
-</li>
-<li>
-<p>Extra-sum-of-squares method</p>
-</li>
-<li>
-<p>Confidence intervals in multiple regression</p>
-</li>
-<li>
-<p>Prediction of new observations</p>
-</li>
-<li>
-<p>Standardized regression coefficients</p>
-</li>
 </ul>
 </li>
+</ul>
+<table>
+<thead>
+<tr>
+<th align="center">📚 <a href="(https://edify-thiyanga.netlify.app/regression/regression4.html#1)">Slides</a></th>
+<th align="center">📒 Reading - Ch3</th>
+<th align="center">📊 Data Sets - <a href="/data/heart.data.csv">heart.data.csv</a></th>
+<th align="center">📎 Problems</th>
+<th align="center">🔖Answers</th>
+</tr>
+</thead>
+</table>
+<h3 id="week-9">Week 9</h3>
+<ul>
+<li>Test of significance of regression</li>
+</ul>
+<pre><code>- Tests on individual regression coefficients
+
+- Extra-sum-of-squares method
+
+- Confidence intervals in multiple regression
+
+- Prediction of new observations
+
+- Standardized regression coefficients
+</code></pre>
+<ul>
 <li>
 <p>Transformations</p>
 <ul>
@@ -723,20 +732,6 @@
 </li>
 </ul>
 </li>
-</ul>
-<table>
-<thead>
-<tr>
-<th align="center">📚Slides</th>
-<th align="center">📒 Reading</th>
-<th align="center">📊 Data Sets</th>
-<th align="center">📎 Problems</th>
-<th align="center">🔖Answers</th>
-</tr>
-</thead>
-</table>
-<h3 id="week-9">Week 9</h3>
-<ul>
 <li>
 <p>Detection and treatment of outliers</p>
 </li>
