--- a/public/courses/regression2020/contentreg/index.html
+++ b/public/courses/regression2020/contentreg/index.html
@@ -695,7 +695,7 @@
 <table>
 <thead>
 <tr>
-<th align="center">📚 <a href="(https://edify-thiyanga.netlify.app/regression/regression4.html#1)">Slides</a></th>
+<th align="center">📚 <a href="https://edify-thiyanga.netlify.app/regression/regression6.html#1">Slides</a></th>
 <th align="center">📒 Reading - Ch3</th>
 <th align="center">📊 Data Sets - <a href="/data/heart.data.csv">heart.data.csv</a></th>
 <th align="center">📎 Problems</th>
