--- a/public/courses/rmsc2020/contentr/index.html
+++ b/public/courses/rmsc2020/contentr/index.html
@@ -658,7 +658,7 @@ Week 0 Help - R and R Studio Download and Install
 <ul>
 <li>Data wrangling with dplyr - 1</li>
 </ul>
-<p>| 📚 <a href="/Slides/2020s1STA5173_0/l7_data_manipulation_with_dplyr.html">Slides</a>  	| 📒 <a href="https://r4ds.had.co.nz/tidy-data.html">Reading -R4DS Ch12</a> 	| 📊 <a href="https://hellor.netlify.app/cheatsheets/data-wrangling-cheatsheet.pdf">Cheat sheet</a>	| 📎 <a href="https://hellor.netlify.app/problems/DataWrangling_Tutorial.pdf">Problems</a> 	| 🔖Answers |</p>
+<p>| 📚 <a href="/Slides/2020s1STA5173_0/l7_data_manipulation_with_dplyr.html">Slides</a>  	| 📒 <a href="https://r4ds.had.co.nz/tidy-data.html">Reading -R4DS Ch12</a> 	| 📊 <a href="https://hellor.netlify.app/cheatsheets/data-wrangling-cheatsheet.pdf">Cheat sheet</a>	| 📎 <a href="https://hellor.netlify.app/problems/DataWrangling_Tutorial.pdf">Problems</a> 	| 🔖 <a href="/Slides/2020s1STA5173_0/MSc_tutorials/DataWrangling_Tutorial_Answers_MSC.pdf">Answers</a> |</p>
 <h3 id="week-9">Week 9</h3>
 <ul>
 <li>The grammar of graphics</li>
