--- a/public/courses/index.html
+++ b/public/courses/index.html
@@ -629,6 +629,7 @@
 <li>DSC 2320 Statistical Data Analysis for Management (Temporary Instructor equivalent to Teaching Associate)</li>
 </ul>
 <hr>
+<p><a href="/Slides/isf2020/ISF_2020_Thiyanga_S_Talagala.html">*-</a></p>
 </div>
   
   <ul class="list-unstyled">
