--- a/public/courses/regression2020/contentreg/index.html
+++ b/public/courses/regression2020/contentreg/index.html
@@ -705,19 +705,45 @@
 </table>
 <h3 id="week-9">Week 9</h3>
 <ul>
-<li>Test of significance of regression</li>
-</ul>
-<pre><code>- Tests on individual regression coefficients
-
-- Extra-sum-of-squares method
-
-- Confidence intervals in multiple regression
-
-- Prediction of new observations
-
-- Standardized regression coefficients
-</code></pre>
+<li>
+<p>ANOVA</p>
 <ul>
+<li>
+<p>Test of significance of regression</p>
+</li>
+<li>
+<p>Tests on individual regression coefficients</p>
+</li>
+<li>
+<p>Extra-sum-of-squares method</p>
+</li>
+</ul>
+</li>
+</ul>
+<table>
+<thead>
+<tr>
+<th align="center">📚Slides</th>
+<th align="center">📒 Reading - <a href="https://bookdown.org/egarpor/SSS2-UC3M/multlin-aovfit.html">here</a></th>
+<th align="center">📊 Data Sets - <a href="/data/heart.data.csv">heart.data.csv</a> and <code>alr3::heights</code></th>
+<th align="center">📎 Problems - Quiz Google Classroom</th>
+<th align="center">🔖Answers</th>
+</tr>
+</thead>
+</table>
+<h3 id="week-10">Week 10</h3>
+<ul>
+<li>
+<p>Confidence intervals in multiple regression</p>
+<ul>
+<li>
+<p>Prediction of new observations</p>
+</li>
+<li>
+<p>Standardized regression coefficients</p>
+</li>
+</ul>
+</li>
 <li>
 <p>Transformations</p>
 <ul>
@@ -755,20 +781,6 @@
 <li>
 <p>Weighted least squares</p>
 </li>
-</ul>
-<table>
-<thead>
-<tr>
-<th align="center">📚Slides</th>
-<th align="center">📒 Reading</th>
-<th align="center">📊 Data Sets</th>
-<th align="center">📎 Problems</th>
-<th align="center">🔖Answers</th>
-</tr>
-</thead>
-</table>
-<h3 id="week-10">Week 10</h3>
-<ul>
 <li>
 <p>Diagnostics for leverage and influence</p>
 <ul>
