--- a/public/courses/regression2020/contentreg/index.html
+++ b/public/courses/regression2020/contentreg/index.html
@@ -723,7 +723,7 @@
 <table>
 <thead>
 <tr>
-<th align="center">📚Slides</th>
+<th align="center">📚 <a href="https://edify-thiyanga.netlify.app/regression/regression7.html#1">Slides</a></th>
 <th align="center">📒 Reading - <a href="https://bookdown.org/egarpor/SSS2-UC3M/multlin-aovfit.html">here</a></th>
 <th align="center">📊 Data Sets - <a href="/data/heart.data.csv">heart.data.csv</a> and <code>alr3::heights</code></th>
 <th align="center">📎 Problems - Quiz Google Classroom</th>
