--- a/public/courses/rmsc2020/contentr/index.html
+++ b/public/courses/rmsc2020/contentr/index.html
@@ -680,12 +680,12 @@ Week 0 Help - R and R Studio Download and Install
 <span style="color:#a6e22e">data</span>(package <span style="color:#f92672">=</span> <span style="color:#e6db74">&#39;</span><span style="color:#e6db74">palmerpenguins&#39;</span>)`
 </code></pre></div><h3 id="week-10">Week 10</h3>
 <ul>
-<li>Functional programming with R</li>
+<li>Statistical modelling - Regression Analysis</li>
 </ul>
 <table>
 <thead>
 <tr>
-<th align="center">📚Slides</th>
+<th align="center">📚 <a href="/Slides/2020s1STA5173_0/l10.html">Slides</a></th>
 <th align="center">📒 Reading</th>
 <th align="center">📊 Data Sets</th>
 <th align="center">📎 Problems</th>
@@ -695,7 +695,7 @@ Week 0 Help - R and R Studio Download and Install
 </table>
 <h3 id="week-11">Week 11</h3>
 <ul>
-<li>Statistical modelling</li>
+<li>Functional programming with R</li>
 </ul>
 <table>
 <thead>
