--- a/public/talk/isf20-talk/index.html
+++ b/public/talk/isf20-talk/index.html
@@ -567,7 +567,7 @@ A Tool to Detect Potential Data Leaks in Forecasting Competitions Forecasting co
   
     
   
-<a class="btn btn-outline-primary my-1 mr-1" href="/static/Slides/isf2020/ISF_2020_Thiyanga_S_Talagala.html" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://thiyanga.netlify.app/slides/isf2020/isf_2020_thiyanga_s_talagala#1" target="_blank" rel="noopener">
   Slides
 </a>
 
