--- a/public/courses/sta33120_stochastic_processes_2020/contentr_stochastic/index.html
+++ b/public/courses/sta33120_stochastic_processes_2020/contentr_stochastic/index.html
@@ -559,8 +559,20 @@ Week 7 - 8   Poisson Process (cont."><meta property="og:image" content="/img/ico
 </ul>
 <h5 id="week--9">Week  9</h5>
 <ul>
-<li><a href="/Slides/2020s2StochasticProcesses/7_stochastic_processes_2020.pdf">Poisson Process (cont.), Splitting of a Poisson process, Compound Poisson processes, Nonhomogeneous Poisson Processes</a></li>
+<li><a href="/Slides/2020s2StochasticProcesses/7_stochastic_processes_2020.pdf">Poisson Process (cont.), Splitting of a Poisson process, Compound Poisson processes</a></li>
 </ul>
+<h4 id="week-10">Week 10</h4>
+<p>Ion Switching|<a href="https://www.kaggle.com/c/liverpool-ion-switching">Kaggle competition</a></p>
+<h4 id="week-11">Week 11</h4>
+<ul>
+<li><a href="/Slides/2020s2StochasticProcesses/7_stochastic_processes_2020.pdf">Nonhomogeneous Poisson Processes</a></li>
+</ul>
+<h4 id="week-12---14">Week 12 - 14</h4>
+<ul>
+<li>Birth and death process</li>
+</ul>
+<h4 id="week-15">Week 15</h4>
+<p>Revision</p>
 <blockquote>
 <p>END</p>
 </blockquote>
