--- a/public/courses/regression2020/contentreg/index.html
+++ b/public/courses/regression2020/contentreg/index.html
@@ -714,9 +714,6 @@
 <li>
 <p>Tests on individual regression coefficients</p>
 </li>
-<li>
-<p>Extra-sum-of-squares method</p>
-</li>
 </ul>
 </li>
 </ul>
@@ -737,12 +734,15 @@
 <p>Confidence intervals in multiple regression</p>
 <ul>
 <li>
-<p>Prediction of new observations</p>
+<p>Confidence intervals on the regression coefficients</p>
 </li>
 <li>
-<p>Standardized regression coefficients</p>
+<p>Confidence interval estimation of the mean response</p>
 </li>
 </ul>
+</li>
+<li>
+<p>Prediction of new observations</p>
 </li>
 <li>
 <p>Transformations</p>
@@ -760,26 +760,6 @@
 </li>
 <li>
 <p>Detection and treatment of outliers</p>
-</li>
-<li>
-<p>Lack of fit of regression model</p>
-<ul>
-<li>
-<p>Pure error</p>
-</li>
-<li>
-<p>Model-independent measures of pure error</p>
-</li>
-<li>
-<p>Lack-of-fit test</p>
-</li>
-</ul>
-</li>
-<li>
-<p>Generalized least squares</p>
-</li>
-<li>
-<p>Weighted least squares</p>
 </li>
 <li>
 <p>Diagnostics for leverage and influence</p>
@@ -802,8 +782,8 @@
 <table>
 <thead>
 <tr>
-<th align="center">📚Slides</th>
-<th align="center">📒 Reading</th>
+<th align="center">📚 <a href="https://edify-thiyanga.netlify.app/regression/regression8.html#1">Slide-i</a></th>
+<th align="center">📒 Reading - Chapter 3, Montgomery, Peck, Vining</th>
 <th align="center">📊 Data Sets</th>
 <th align="center">📎 Problems</th>
 <th align="center">🔖Answers</th>
