--- a/public/courses/regression2020/contentreg/index.html
+++ b/public/courses/regression2020/contentreg/index.html
@@ -744,6 +744,14 @@
 <li>
 <p>Prediction of new observations</p>
 </li>
+</ul>
+<h4 id="mid-evaluation-assignment---visit-lms-google-classroom-1-nov-2020-">Mid Evaluation Assignment - Visit LMS/ Google Classroom (1 Nov 2020) 📝</h4>
+<p>Assignment deadline: 15 Nov 2020</p>
+<p>Special considerations email me on or before 8 Nov 2020</p>
+<p>| 📚 <a href="https://edify-thiyanga.netlify.app/regression/regression8.html#1">Slide</a>  	| 📒 Reading - Chapter 3, Montgomery, Peck, Vining 	| 📊 Data Sets 	| 📎 Problems 	| 🔖Answers |</p>
+<p>|:-:	|:-:	|:-:	|:-:	|:-:	|</p>
+<h3 id="week-11">Week 11</h3>
+<ul>
 <li>
 <p>Transformations</p>
 <ul>
@@ -778,20 +786,6 @@
 </li>
 </ul>
 </li>
-</ul>
-<table>
-<thead>
-<tr>
-<th align="center">📚 <a href="https://edify-thiyanga.netlify.app/regression/regression8.html#1">Slide-i</a></th>
-<th align="center">📒 Reading - Chapter 3, Montgomery, Peck, Vining</th>
-<th align="center">📊 Data Sets</th>
-<th align="center">📎 Problems</th>
-<th align="center">🔖Answers</th>
-</tr>
-</thead>
-</table>
-<h3 id="week-11">Week 11</h3>
-<ul>
 <li>
 <p>Regression with qualitative variables</p>
 <ul>
