--- a/public/courses/regression2020/contentreg/index.html
+++ b/public/courses/regression2020/contentreg/index.html
@@ -751,7 +751,7 @@
 <table>
 <thead>
 <tr>
-<th align="center">📚 <a href="https://edify-thiyanga.netlify.app/regression/regression8.html#1">Slide</a></th>
+<th align="center">📚 <a href="https://edify-thiyanga.netlify.app/regression/regression8.html#1">Slides</a></th>
 <th align="center">📒 Reading - Chapter 3, Montgomery, Peck, Vining</th>
 <th align="center">📊 Data Sets</th>
 <th align="center">📎 Problems</th>
@@ -816,9 +816,9 @@
 <table>
 <thead>
 <tr>
-<th align="center">📚Slides</th>
-<th align="center">📒 Reading</th>
-<th align="center">📊 Data Sets</th>
+<th align="center">📚<a href="https://edify-thiyanga.netlify.app/regression/regression9.html#1">Slides</a></th>
+<th align="center">📒 Reading - Section 3.3, Montgomery, Peck, Vining</th>
+<th align="center">📊 Data Sets - <a href="/data/coconut.csv">coconut.csv</a> <a href="/data/salarydata.csv">salarydata.csv</a></th>
 <th align="center">📎 Problems</th>
 <th align="center">🔖Answers</th>
 </tr>
