--- a/public/courses/rmsc2020/contentr/index.html
+++ b/public/courses/rmsc2020/contentr/index.html
@@ -717,7 +717,7 @@ Week 0 Help - R and R Studio Download and Install
 <tr>
 <th align="center">📚<a href="/Slides/2020s1STA5173_0/l11_inverse_transformation.html">Slides</a></th>
 <th align="center">📒 <a href="https://adv-r.hadley.nz/functionals.html">Reading</a></th>
-<th align="center">📊 Data Sets</th>
+<th align="center">📊 <a href="/Slides/2020s1STA5173_0/R_purrr.pdf">Cheat sheet</a></th>
 <th align="center">📎 Problems</th>
 <th align="center">🔖Answers</th>
 </tr>
