--- a/public/courses/rmsc2020/contentr/index.html
+++ b/public/courses/rmsc2020/contentr/index.html
@@ -714,7 +714,7 @@ Week 0 Help - R and R Studio Download and Install
 <table>
 <thead>
 <tr>
-<th align="center">📚<a href="/Slides/2020s1STA5173_0/l12_functionals.html">Slides</a></th>
+<th align="center">📚<a href="/Slides/2020s1STA5173_0/l12_functionals.html">Slides - part 1</a> <a href="/Slides/2020s1STA5173_0/l13_functionals.html">Slides - part 2</a></th>
 <th align="center">📒 <a href="https://adv-r.hadley.nz/functionals.html">Reading</a></th>
 <th align="center">📊 <a href="/Slides/2020s1STA5173_0/R_purrr.pdf">Cheat sheet</a></th>
 <th align="center">📎 <a href="/Slides/2020s1STA5173_0/functionals_tutorial.pdf">Problems</a></th>
