--- a/static/Slides/2020s1STA5173_0/l12_functionals.html
+++ b/static/Slides/2020s1STA5173_0/l12_functionals.html
@@ -17,7 +17,7 @@
 class: center, middle, inverse, title-slide
 
 # STA 517 3.0 Programming and Statistical Computing with R
-## Functionals: Overview
+## Functionals - part 1: Overview
 ### Dr Thiyanga Talagala
 ### 8 November 2020
 
