--- a/public/courses/sta33120_stochastic_processes_2020/contentr_stochastic/index.html
+++ b/public/courses/sta33120_stochastic_processes_2020/contentr_stochastic/index.html
@@ -583,6 +583,9 @@ Week 7 - 8   Poisson Process (cont."><meta property="og:image" content="/img/ico
 <li>
 <p><a href="/Slides/2020s2StochasticProcesses/9_stochastic_processes_2020.pdf">Pure Death Process</a></p>
 </li>
+<li>
+<p>Assignment 3: Please go the LMS (Due date: 24 Nov 2020)</p>
+</li>
 </ul>
 <h3 id="week-15">Week 15</h3>
 <p>Revision</p>
