--- a/public/courses/rmsc2020/contentr/index.html
+++ b/public/courses/rmsc2020/contentr/index.html
@@ -727,15 +727,29 @@ Week 0 Help - R and R Studio Download and Install
 </blockquote>
 <h3 id="week-13">Week 13</h3>
 <ul>
-<li>Monte Carlo methods in inference</li>
+<li>Hypothesis testing</li>
 </ul>
 <table>
 <thead>
 <tr>
-<th align="center">📚Slides</th>
+<th align="center">📚<a href="/Slides/2020s1STA5173_0/l14_Hypothesis_testing.html">Slides</a></th>
 <th align="center">📒 Reading</th>
 <th align="center">📊 Data Sets</th>
 <th align="center">📎 Problems</th>
+<th align="center">🔖Answers</th>
+</tr>
+</thead>
+</table>
+<ul>
+<li>The method of Monte Carlo</li>
+</ul>
+<table>
+<thead>
+<tr>
+<th align="center">📚<a href="/Slides/2020s1STA5173_0/l15_Monte_Carlo.html">Slides</a></th>
+<th align="center">📒 Reading</th>
+<th align="center">📊 Data Sets</th>
+<th align="center">📎 Problems - Questions given in the note.</th>
 <th align="center">🔖Answers</th>
 </tr>
 </thead>
