--- a/public/courses/rmsc2020/contentr/index.html
+++ b/public/courses/rmsc2020/contentr/index.html
@@ -735,8 +735,8 @@ Week 0 Help - R and R Studio Download and Install
 <th align="center">📚<a href="/Slides/2020s1STA5173_0/l14_Hypothesis_testing.html">Slides</a></th>
 <th align="center">📒 Reading</th>
 <th align="center">📊 Data Sets</th>
-<th align="center">📎 Problems</th>
-<th align="center">🔖Answers</th>
+<th align="center">📎 <a href="/Slides/2020s1STA5173_0/Hypothesis_questions.pdf">Problems</a></th>
+<th align="center">🔖 Answers</th>
 </tr>
 </thead>
 </table>
@@ -754,6 +754,9 @@ Week 0 Help - R and R Studio Download and Install
 </tr>
 </thead>
 </table>
+<ul>
+<li>Assignment (20 marks): Details visit google classroom or LMS.</li>
+</ul>
 <h3 id="week-14">Week 14</h3>
 <ul>
 <li>Bootstrap and Jackknife</li>
