--- a/public/courses/rmsc2020/contentr/index.html
+++ b/public/courses/rmsc2020/contentr/index.html
@@ -756,7 +756,7 @@ Week 0 Help - R and R Studio Download and Install
 <table>
 <thead>
 <tr>
-<th align="center">📚<a href="/Slides/2020s1STA5173_0/l15_Monte_Carlo.html">Slides</a></th>
+<th align="center">📚<a href="/Slides/2020s1STA5173_0/l15_Monte_Carlo.pdf">Slides</a></th>
 <th align="center">📒 Reading</th>
 <th align="center">📊 Data Sets</th>
 <th align="center">📎 Problems - Questions given in the note.</th>
