--- a/public/courses/regression2020/contentreg/index.html
+++ b/public/courses/regression2020/contentreg/index.html
@@ -775,6 +775,21 @@
 </li>
 </ul>
 </li>
+</ul>
+<table>
+<thead>
+<tr>
+<th align="center">📚<a href="https://edify-thiyanga.netlify.app/regression/regression9.html#1">Slides</a></th>
+<th align="center">📒 Reading - Section 3.3, Montgomery, Peck, Vining</th>
+<th align="center">📊 Data Sets - <a href="/data/coconut.csv">coconut.csv</a> <a href="/data/salarydata.csv">salarydata.csv</a></th>
+<th align="center">📎 Problems</th>
+<th align="center">🔖Answers</th>
+</tr>
+</thead>
+</table>
+<h4 id="14-november-2020---public-holiday-deepavali-festival-day">14 November 2020 - Public Holiday (Deepavali Festival Day)</h4>
+<h3 id="week-12">Week 12</h3>
+<ul>
 <li>
 <p>Detection and treatment of outliers</p>
 </li>
@@ -795,20 +810,6 @@
 </li>
 </ul>
 </li>
-</ul>
-<table>
-<thead>
-<tr>
-<th align="center">📚<a href="https://edify-thiyanga.netlify.app/regression/regression9.html#1">Slides</a></th>
-<th align="center">📒 Reading - Section 3.3, Montgomery, Peck, Vining</th>
-<th align="center">📊 Data Sets - <a href="/data/coconut.csv">coconut.csv</a> <a href="/data/salarydata.csv">salarydata.csv</a></th>
-<th align="center">📎 Problems</th>
-<th align="center">🔖Answers</th>
-</tr>
-</thead>
-</table>
-<h3 id="week-12">Week 12</h3>
-<ul>
 <li>
 <p>Regression with qualitative variables</p>
 <ul>
