--- a/public/courses/regression2020/contentreg/index.html
+++ b/public/courses/regression2020/contentreg/index.html
@@ -851,7 +851,7 @@
 <table>
 <thead>
 <tr>
-<th align="center">📚Slides</th>
+<th align="center">📚 <a href="https://edify-thiyanga.netlify.app/regression/regression10.html#1">Slides-i</a></th>
 <th align="center">📒 Reading</th>
 <th align="center">📊 Data Sets</th>
 <th align="center">📎 Problems</th>
