add indicator variables

--- a/public/courses/regression2020/contentreg/index.html
+++ b/public/courses/regression2020/contentreg/index.html
@@ -831,8 +831,8 @@
 <table>
 <thead>
 <tr>
-<th align="center">📚 <a href="https://edify-thiyanga.netlify.app/regression/regression10.html#1">Slides-i</a></th>
-<th align="center">📒 Reading - Ch6, 11.1 (Montgomery, Peck, Vining)</th>
+<th align="center">📚 <a href="https://edify-thiyanga.netlify.app/regression/regression10.html#1">Slides-i</a> <a href="https://edify-thiyanga.netlify.app/regression/regression11.html#1">Slides-ii</a></th>
+<th align="center">📒 Reading - Ch6, 11.1, Ch8 (Montgomery, Peck, Vining)</th>
 <th align="center">📊 Data Sets - see slides</th>
 <th align="center">📎 Problems</th>
 <th align="center">🔖Answers</th>
