--- a/public/courses/rmsc2020/contentr/index.html
+++ b/public/courses/rmsc2020/contentr/index.html
@@ -765,7 +765,7 @@ Week 0 Help - R and R Studio Download and Install
 </thead>
 </table>
 <ul>
-<li>Assignment (20 marks): Details visit google classroom or LMS.</li>
+<li>Assignment (10 marks): Details visit google classroom or LMS.</li>
 </ul>
 <h3 id="week-14">Week 14</h3>
 <ul>
@@ -774,10 +774,10 @@ Week 0 Help - R and R Studio Download and Install
 <table>
 <thead>
 <tr>
-<th align="center">📚Slides</th>
-<th align="center">📒 Reading</th>
-<th align="center">📊 Data Sets</th>
-<th align="center">📎 Problems</th>
+<th align="center">📚 <a href="/Slides/2020s1STA5173_0/l14.html">Slides</a></th>
+<th align="center">📒 <a href="http://bcs.whfreeman.com/webpub/statistics/ips9e/9781319013387/companionchapters/companionchapter16.pdf">Reading</a></th>
+<th align="center">📊 Data Sets - <code>iris</code></th>
+<th align="center">📎 Problems - see slides</th>
 <th align="center">🔖Answers</th>
 </tr>
 </thead>
