--- a/public/courses/rmsc2020/contentr/index.html
+++ b/public/courses/rmsc2020/contentr/index.html
@@ -777,7 +777,7 @@ Week 0 Help - R and R Studio Download and Install
 <th align="center">📚 <a href="/Slides/2020s1STA5173_0/l14.html">Slides</a></th>
 <th align="center">📒 <a href="http://bcs.whfreeman.com/webpub/statistics/ips9e/9781319013387/companionchapters/companionchapter16.pdf">Reading</a></th>
 <th align="center">📊 Data Sets - <code>iris</code></th>
-<th align="center">📎 Problems - see slides</th>
+<th align="center">📎 <a href="https://thiyanga.netlify.app/slides/2020s1sta5173_0/l14#22">Problems</a></th>
 <th align="center">🔖Answers</th>
 </tr>
 </thead>
