--- a/public/courses/sta33120_stochastic_processes_2020/contentr_stochastic/index.html
+++ b/public/courses/sta33120_stochastic_processes_2020/contentr_stochastic/index.html
@@ -590,20 +590,20 @@ Week 7 - 8   Poisson Process (cont."><meta property="og:image" content="/img/ico
 <p>Assignment 3: Please go the LMS (Due date: 24 Nov 2020)</p>
 </li>
 <li>
+<p>[Birth-and-Death Process]</p>
+</li>
+<li>
 <p><a href="/Slides/2020s2StochasticProcesses/12_stochastic_processes_2020.pdf">Birth-and-Death Process - important results</a></p>
 </li>
 </ul>
 <h3 id="week-15">Week 15</h3>
 <ul>
-<li>
-<p>Birth-and-Death Process</p>
-</li>
-<li>
-<p>Birth-and-Death Process - important results (cont)</p>
-</li>
+<li>Birth-and-Death Process - important results (cont)</li>
 </ul>
 <p>Revision</p>
 <p>Individual Presentations - SIR models</p>
+<h4 id="past-papers">Past papers</h4>
+<p>Visit LMS</p>
 <blockquote>
 <p>END</p>
 </blockquote>
