--- a/public/courses/sta33120_stochastic_processes_2020/contentr_stochastic/index.html
+++ b/public/courses/sta33120_stochastic_processes_2020/contentr_stochastic/index.html
@@ -590,7 +590,7 @@ Week 7 - 8   Poisson Process (cont."><meta property="og:image" content="/img/ico
 <p>Assignment 3: Please go the LMS (Due date: 24 Nov 2020)</p>
 </li>
 <li>
-<p>[Birth-and-Death Process]</p>
+<p><a href="/Slides/2020s2StochasticProcesses/13_stochastic_processes_2020.pdf">Birth-and-Death Process</a></p>
 </li>
 <li>
 <p><a href="/Slides/2020s2StochasticProcesses/12_stochastic_processes_2020.pdf">Birth-and-Death Process - important results</a></p>
@@ -598,7 +598,7 @@ Week 7 - 8   Poisson Process (cont."><meta property="og:image" content="/img/ico
 </ul>
 <h3 id="week-15">Week 15</h3>
 <ul>
-<li>Birth-and-Death Process - important results (cont)</li>
+<li><a href="/Slides/2020s2StochasticProcesses/14_stochastic_processes_2020.pdf">Birth-and-Death Process - important results (cont)</a></li>
 </ul>
 <p>Revision</p>
 <p>Individual Presentations - SIR models</p>
