--- a/public/courses/regression2020/contentreg/index.html
+++ b/public/courses/regression2020/contentreg/index.html
@@ -864,6 +864,20 @@
 </li>
 </ul>
 </li>
+</ul>
+<table>
+<thead>
+<tr>
+<th align="center">📚 <a href="https://edify-thiyanga.netlify.app/regression/regression12.pdf">Slides</a></th>
+<th align="center">📒 Reading - Ch 9</th>
+<th align="center">📊 Data Sets -	<a href="/data/real-estate.csv">real-estate.csv</a></th>
+<th align="center">📎 Problems</th>
+<th align="center">🔖Answers</th>
+</tr>
+</thead>
+</table>
+<h3 id="week-14">Week 14</h3>
+<ul>
 <li>
 <p>Multicollinearity</p>
 <ul>
@@ -878,20 +892,6 @@
 </li>
 </ul>
 </li>
-</ul>
-<table>
-<thead>
-<tr>
-<th align="center">📚Slides</th>
-<th align="center">📒 Reading</th>
-<th align="center">📊 Data Sets</th>
-<th align="center">📎 Problems</th>
-<th align="center">🔖Answers</th>
-</tr>
-</thead>
-</table>
-<h3 id="week-14">Week 14</h3>
-<ul>
 <li>
 <p>Bootstrapping in regression</p>
 <ul>
