--- a/public/courses/regression2020/contentreg/index.html
+++ b/public/courses/regression2020/contentreg/index.html
@@ -872,7 +872,7 @@
 <th align="center">📒 Reading - Ch 9</th>
 <th align="center">📊 Data Sets -	<a href="/data/real-estate.csv">real-estate.csv</a></th>
 <th align="center">📎 <a href="https://edify-thiyanga.netlify.app/regression/variableSelectionproblem.pdf">Problems</a></th>
-<th align="center">🔖Answers - inclass</th>
+<th align="center">🔖Answers - Inclass discussion</th>
 </tr>
 </thead>
 </table>
@@ -914,7 +914,7 @@
 <th align="center">📒 Reading  - Ch 10</th>
 <th align="center">📊 <a href="/data/bloodpressure.csv">Data Sets</a></th>
 <th align="center">📎 Problems</th>
-<th align="center">🔖Answers</th>
+<th align="center">🔖Answers - Inclass discussion</th>
 </tr>
 </thead>
 </table>
