updated course website

--- a/public/courses/rmsc2020/contentr/index.html
+++ b/public/courses/rmsc2020/contentr/index.html
@@ -31,7 +31,7 @@
   <meta name="description" content="Here is your road map for the course!
 Week 0 Help - R and R Studio Download and Install
 📗
- Week 1-4: lectures (online)
+ Week 1-2: lectures (online)
  Week 1  Introduction and basics of R programming     📚Slides 📒 Reading-2.1, 2.2, 5.1 📊 Data Sets 📎 Problems 🔖Answers    Week 2  Data structures (Matrices, Arrays, List, Data frames, Factors)     📚Slides 📒 Reading-5.">
 
   
@@ -130,7 +130,7 @@ Week 0 Help - R and R Studio Download and Install
   <meta property="og:description" content="Here is your road map for the course!
 Week 0 Help - R and R Studio Download and Install
 📗
- Week 1-4: lectures (online)
+ Week 1-2: lectures (online)
  Week 1  Introduction and basics of R programming     📚Slides 📒 Reading-2.1, 2.2, 5.1 📊 Data Sets 📎 Problems 🔖Answers    Week 2  Data structures (Matrices, Arrays, List, Data frames, Factors)     📚Slides 📒 Reading-5."><meta property="og:image" content="/img/icon-192.png">
   <meta property="twitter:image" content="/img/icon-192.png"><meta property="og:locale" content="en-us">
   
@@ -543,7 +543,7 @@ Week 0 Help - R and R Studio Download and Install
 <p><strong>Week 0</strong>  <a href="https://edify-thiyanga.netlify.app/installation/">Help - R and R Studio Download and Install</a></p>
 <p><a href="/Slides/2020s1STA5173_0/l0.html">📗</a></p>
 <blockquote>
-<p>Week 1-4: lectures (online)</p>
+<p>Week 1-2: lectures (online)</p>
 </blockquote>
 <h3 id="week-1">Week 1</h3>
 <ul>
@@ -575,6 +575,9 @@ Week 0 Help - R and R Studio Download and Install
 </tr>
 </thead>
 </table>
+<blockquote>
+<p>Week 3-7: lectures (in-class)</p>
+</blockquote>
 <h3 id="week-3">Week 3</h3>
 <ul>
 <li>Built-in functions in R</li>
