--- a/public/courses/rmsc2020/contentr/index.html
+++ b/public/courses/rmsc2020/contentr/index.html
@@ -712,11 +712,11 @@ Week 0 Help - R and R Studio Download and Install
 <table>
 <thead>
 <tr>
-<th align="center">📚 <a href="/Slides/2020s1STA5173_0/l11_inverse_transformation.html">Slides</a></th>
+<th align="center">📚 <a href="/Slides/2020s1STA5173_0/l11_inverse_transformation.pdf">Slides</a></th>
 <th align="center">📒 Reading</th>
 <th align="center">📊 Data Sets</th>
 <th align="center">📎 Problems</th>
-<th align="center">🔖 <a href="/Slides/2020s1STA5173_0/l11_inverse_transformation.html">Answers</a></th>
+<th align="center">🔖 <a href="/Slides/2020s1STA5173_0/l11_inverse_transformation_answers.pdf">Answers</a></th>
 </tr>
 </thead>
 </table>
