--- a/public/index.html
+++ b/public/index.html
@@ -843,7 +843,8 @@
 <p><!-- raw HTML omitted --><!-- raw HTML omitted --> <a href="https://github.com/thiyangt/colmozzie">colmozzie</a>: R package for dengue cases and climate variables in Colombo Sri Lanka
 <a href="https://cran.r-project.org/package=colmozzie"><img src="http://www.r-pkg.org/badges/version/colmozzie" alt="CRAN_Status_Badge"></a></p>
 <p><!-- raw HTML omitted --><!-- raw HTML omitted --> <a href="https://github.com/carlanetto/M4comp2018">m4comp2018</a>: R package for <a href="https://www.m4.unic.ac.cy/">M4 Competition</a> time series data</p>
-<p><!-- raw HTML omitted --><!-- raw HTML omitted --> <a href="https://github.com/thiyangt/DSjobtracker">DSjobtracker</a>: R package containing information related to data science job advertisements. What skills and qualifications are required for data science related jobs?</p>
+<p><!-- raw HTML omitted --><!-- raw HTML omitted --> <a href="https://github.com/thiyangt/DSjobtracker">DSjobtracker</a>: R package containing information related to data science job advertisements. What skills and qualifications are required for data science related jobs?
+<a href="https://CRAN.R-project.org/package=DSjobtracker"><img src="http://www.r-pkg.org/badges/version/DSjobtracker" alt="CRAN_Status_Badge"></a></p>
 
 
     
