--- a/public/talk/user18-talk/index.html
+++ b/public/talk/user18-talk/index.html
@@ -87,20 +87,18 @@ The seer package provides a novel framework for forecast model selection using t
   
   <link rel="stylesheet" href="/css/academic.css">
 
-  
 
 
 
 
-  
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-131293278-1"></script>
 <script>
-  (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','tstalagala@gmail.com');
-</script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-131293278-1');
+</script>
 
 
   
