--- a/public/courses/index.html
+++ b/public/courses/index.html
@@ -521,15 +521,29 @@
 <p><a href="https://statisticsmart.shinyapps.io/SimpleLinearRegression/">Simple Linear Regression</a></p>
 <hr>
 <h1 id="2021">2021</h1>
-<h2 id="semester-1-to-begin">Semester 1 (To begin)</h2>
+<h2 id="semester-1">Semester 1</h2>
 <p>Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura (USJ)</p>
+<p>BSc (Hon) Degree in Statistics/ Applied Sciences</p>
 <ul>
 <li>
-<p>STA 326 2.0 Programming and Data Analysis with R</p>
+<p><a href="https://hellor.netlify.app/schedule/">STA 326 2.0 Programming and Data Analysis with R</a></p>
 </li>
 <li>
 <p>ASP 460 2.0 Data Visualisation</p>
 </li>
+</ul>
+<p>MSc in Applied Statistics</p>
+<ul>
+<li>
+<p>STA 529 2.0 Data Mining</p>
+</li>
+<li>
+<p>STA 517 3.0 Programming and Statistical Computing with R</p>
+</li>
+</ul>
+<p>PG Certificate Course in Applied Statistics</p>
+<ul>
+<li>STA 506 2.0 Linear Regression Analysis</li>
 </ul>
 <h1 id="2020">2020</h1>
 <h2 id="semester-2">Semester 2</h2>
@@ -552,7 +566,7 @@
 <ul>
 <li><a href="https://edify-thiyanga.netlify.app/ictc2020/">ICTC 3104.3 Data Analytics and Big Data: Introduction to R</a></li>
 </ul>
-<h2 id="semester-1">Semester 1</h2>
+<h2 id="semester-1-1">Semester 1</h2>
 <p>Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura (USJ)</p>
 <ul>
 <li>
@@ -591,7 +605,7 @@
 <p><a href="/CO/2015s2/STA22420_2015_s2.pdf">STA 224 2.0 Regression Analysis</a></p>
 </li>
 </ul>
-<h2 id="semester-1-1">Semester 1</h2>
+<h2 id="semester-1-2">Semester 1</h2>
 <p>Department of Statistics, Faculty of Applied Sciences, USJ</p>
 <ul>
 <li>
@@ -616,7 +630,7 @@
 <ul>
 <li><a href="/CO/2014s2/PBTMBL_2014_s2.pdf">PBT/ PBL/ MBL 387 2.0 Biostatistics and Computer Applications</a></li>
 </ul>
-<h2 id="semester-1-2">Semester 1</h2>
+<h2 id="semester-1-3">Semester 1</h2>
 <p>Department of Statistics and Computer Science, Faculty of Applied Sciences, USJ</p>
 <ul>
 <li>
@@ -652,7 +666,7 @@
 <ul>
 <li><a href="/CO/2013s2/BPharmBioStatistics_2013_s2.pdf">Biostatistics</a></li>
 </ul>
-<h2 id="semester-1-3">Semester 1</h2>
+<h2 id="semester-1-4">Semester 1</h2>
 <p>Department of Statistics and Computer Science, Faculty of Applied Sciences, USJ</p>
 <ul>
 <li><a href="/CO/2013s1/STA1123.0.pdf">STA 112 3.0 Probability and Distribution Theory</a></li>
@@ -690,7 +704,7 @@
 <ul>
 <li><a href="/CO/2012s2/MLS.pdf">Biostatistics-Teaching Associate</a></li>
 </ul>
-<h2 id="semester-1-4">Semester 1</h2>
+<h2 id="semester-1-5">Semester 1</h2>
 <p>Department of Statistics and Computer Science, Faculty of Applied Sciences, USJ</p>
 <ul>
 <li>STA 112 3.0 Probability and Distribution Theory (Temporary Instructor equivalent to Teaching Associate)</li>
