--- a/public/project/medlea/index.html
+++ b/public/project/medlea/index.html
@@ -655,7 +655,7 @@ Identification. MEDIPI
 contains two main phases (i) The offline phase, and (ii) The online phase. The algorithm operates on a set of interpretable features computed from the images.  Figure 3 provides an overview of our algorithm.</p>
 <p><img src="medipi.png" alt=""></p>
 <p>Figure 3: Overview of MEDIPI algorithm</p>
-<p>This work is a part of <a href="https://www.linkedin.com/in/jayani-lakshika-9a0297162/">Jayani P G Lakshika</a> BSc (Hons) Degree in Statistics thesis - 2021 thesis supervised me.</p>
+<p>This work is a part of <a href="https://www.linkedin.com/in/jayani-lakshika-9a0297162/">Jayani P G Lakshika</a> BSc (Hons) Degree in Statistics thesis - 2021, which was supervised by me.</p>
 
     </div>
 
