--- a/public/index.html
+++ b/public/index.html
@@ -2666,7 +2666,9 @@ Fit a simple linear regression model …
       
     </div>
     <div class="col-12 col-lg-8">
-      <h2 id="2020">2020</h2>
+      <h2 id="2021">2021</h2>
+<p><a href="https://r4fun.netlify.app/blog/">Data analysis with R: Sri Lanka Association for the Advancement of Science (SLAAS) - Section C</a></p>
+<h2 id="2020">2020</h2>
 <p><a href="https://rladiescolombo.netlify.app/talk/1_rmarkdown/">R Markdown-On your marks, get set, ready, go!</a></p>
 
     </div>
