--- a/public/index.html
+++ b/public/index.html
@@ -2668,6 +2668,7 @@ Fit a simple linear regression model …
     <div class="col-12 col-lg-8">
       <h2 id="2021">2021</h2>
 <p><a href="https://r4fun.netlify.app/blog/">Data analysis with R: Sri Lanka Association for the Advancement of Science (SLAAS) - Section C</a></p>
+<p><a href="https://talks-thiyanga.netlify.app/6_thesiswriting/main.html#1">Thesis writing - MSc in Applied Statistics, USJ</a></p>
 <h2 id="2020">2020</h2>
 <p><a href="https://rladiescolombo.netlify.app/talk/1_rmarkdown/">R Markdown-On your marks, get set, ready, go!</a></p>
 
