updated site with covid19srilanka R package

--- a/public/project/datasets/index.html
+++ b/public/project/datasets/index.html
@@ -632,7 +632,7 @@
 <p>Dataset: <a href="foodlabel.csv">foodlabel.csv</a></p>
 <p><a href="food2ques.pdf">Questionnaire: Consumers' awareness and use of food label information</a></p>
 <h2 id="datasets-in-ggplot2">Datasets in ggplot2</h2>
-<pre><code class="language-{r}" data-lang="{r}">vcdExtra::datasets(&quot;ggplot2&quot;)
+<pre tabindex="0"><code class="language-{r}" data-lang="{r}">vcdExtra::datasets(&quot;ggplot2&quot;)
 </code></pre>
     </div>
 
