--- a/public/project/medlea/index.html
+++ b/public/project/medlea/index.html
@@ -644,7 +644,7 @@ plant images. This repository contains 1099 leaf images of 31 species. There are
 <p><img src="imgleaf.png" alt=""></p>
 <p>Figure 2: Few samples from the MedLEA images</p>
 <p>You can get access to the data set via the MedLEA package.</p>
-<pre><code class="language-{r," data-lang="{r,">install.packages(&quot;MedLEA&quot;)
+<pre tabindex="0"><code class="language-{r," data-lang="{r,">install.packages(&quot;MedLEA&quot;)
 </code></pre><h1 id="algorithm-for-leaves-classification">Algorithm for leaves classification</h1>
 <h2 id="medipi-mediicinal-plant-identification-algorithm">MEDIPI (<strong>MEDI</strong>icinal <strong>P</strong>lant <strong>I</strong>dentification) algorithm</h2>
 <p>Medicinal plants are usually identified by practitioners based on years of experience through
