--- a/public/slides/example/index.html
+++ b/public/slides/example/index.html
@@ -92,7 +92,7 @@ $$</p>
 <hr>
 <h2 id="fragments">Fragments</h2>
 <p>Make content appear incrementally</p>
-<pre><code>{{% fragment %}} One {{% /fragment %}}
+<pre tabindex="0"><code>{{% fragment %}} One {{% /fragment %}}
 {{% fragment %}} **Two** {{% /fragment %}}
 {{% fragment %}} Three {{% /fragment %}}
 </code></pre><p>Press <code>Space</code> to play!</p>
