--- a/public/courses/index.html
+++ b/public/courses/index.html
@@ -521,6 +521,23 @@
 <p><a href="https://statisticsmart.shinyapps.io/SimpleLinearRegression/">Simple Linear Regression</a></p>
 <hr>
 <h1 id="2021">2021</h1>
+<h2 id="semester-2">Semester 2</h2>
+<p>Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura (USJ)</p>
+<ul>
+<li>
+<p><a href="https://scs-fas-sjp.netlify.app/">STA 474 2.0 Statistical Consultancy</a></p>
+</li>
+<li>
+<p><a href="https://thiyanga.netlify.app/courses/sta33120_stochastic_processes_2020/">STA 331 2.0 Stochastic Processes</a></p>
+</li>
+<li>
+<p><a href="https://smart-doe.netlify.app/">STA 225 2.0 Design and Analysis of Experiments</a></p>
+</li>
+</ul>
+<p>MSc in Applied Statistics</p>
+<ul>
+<li>STA 529 2.0 Data Mining</li>
+</ul>
 <h2 id="semester-1">Semester 1</h2>
 <p>Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura (USJ)</p>
 <p>BSc (Hon) Degree in Statistics/ Applied Sciences</p>
@@ -534,19 +551,14 @@
 </ul>
 <p>MSc in Applied Statistics</p>
 <ul>
-<li>
-<p>STA 529 2.0 Data Mining</p>
-</li>
-<li>
-<p>STA 517 3.0 Programming and Statistical Computing with R</p>
-</li>
+<li>STA 517 3.0 Programming and Statistical Computing with R</li>
 </ul>
 <p>PG Certificate Course in Applied Statistics</p>
 <ul>
 <li>STA 506 2.0 Linear Regression Analysis</li>
 </ul>
 <h1 id="2020">2020</h1>
-<h2 id="semester-2">Semester 2</h2>
+<h2 id="semester-2-1">Semester 2</h2>
 <p>Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura (USJ)</p>
 <ul>
 <li>
@@ -595,7 +607,7 @@
 </li>
 </ul>
 <h1 id="2015">2015</h1>
-<h2 id="semester-2-1">Semester 2</h2>
+<h2 id="semester-2-2">Semester 2</h2>
 <p>Department of Statistics, Faculty of Applied Sciences, USJ</p>
 <ul>
 <li>
@@ -616,7 +628,7 @@
 </li>
 </ul>
 <h1 id="2014">2014</h1>
-<h2 id="semester-2-2">Semester 2</h2>
+<h2 id="semester-2-3">Semester 2</h2>
 <p>Department of Statistics and Computer Science, Faculty of Applied Sciences, USJ</p>
 <ul>
 <li>
@@ -644,7 +656,7 @@
 </li>
 </ul>
 <h1 id="2013">2013</h1>
-<h2 id="semester-2-3">Semester 2</h2>
+<h2 id="semester-2-4">Semester 2</h2>
 <p>Department of Statistics and Computer Science, Faculty of Applied Sciences, USJ</p>
 <ul>
 <li>STA 215 1.5 Data Analysis II</li>
@@ -686,7 +698,7 @@
 </ul>
 <p>Department of Medical Laboratory Science, Faculty of Medical Sciences, USJ</p>
 <h1 id="2012">2012</h1>
-<h2 id="semester-2-4">Semester 2</h2>
+<h2 id="semester-2-5">Semester 2</h2>
 <p>Department of Statistics and Computer Science, Faculty of Applied Sciences, USJ</p>
 <ul>
 <li>STA 308 1.0 Medical Statistics</li>
