--- a/public/courses/index.html
+++ b/public/courses/index.html
@@ -525,13 +525,13 @@
 <p>Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura (USJ)</p>
 <ul>
 <li>
-<p><a href="https://scs-fas-sjp.netlify.app/">STA 474 2.0 Statistical Consultancy</a></p>
+<p><a href="https://smart-doe.netlify.app/">STA 225 2.0 Design and Analysis of Experiments</a></p>
 </li>
 <li>
 <p><a href="https://stochasticprocesses.netlify.app/">STA 331 2.0 Stochastic Processes</a></p>
 </li>
 <li>
-<p><a href="https://smart-doe.netlify.app/">STA 225 2.0 Design and Analysis of Experiments</a></p>
+<p><a href="https://scs-fas-sjp.netlify.app/">STA 474 2.0 Statistical Consultancy</a> <a href="https://thiyanga.netlify.app/courses/sta33120_stochastic_processes_2021/">Course information</a></p>
 </li>
 </ul>
 <p>MSc in Applied Statistics</p>
