--- a/public/courses/statisticalconsultancy/index.html
+++ b/public/courses/statisticalconsultancy/index.html
@@ -540,7 +540,7 @@
 
       <nav id="TableOfContents">
   <ul>
-    <li><a href="#sta-331-20-stochastic-processes">STA 331 2.0 Stochastic Processes</a></li>
+    <li><a href="#sta-474-20-statistical-consultancy">STA 474 2.0 Statistical Consultancy</a></li>
     <li><a href="#course-information">Course information</a></li>
     <li><a href="#contact-information">Contact Information</a></li>
   </ul>
@@ -558,7 +558,7 @@
           <h1></h1>
 
           <div class="article-style">
-            <h2 id="sta-331-20-stochastic-processes">STA 331 2.0 Stochastic Processes</h2>
+            <h2 id="sta-474-20-statistical-consultancy">STA 474 2.0 Statistical Consultancy</h2>
 <p>BSc (Hons) Statistics, Department of Statistics, University of Sri Jayewardenepura.</p>
 <h2 id="course-information">Course information</h2>
 <p>Year and Semester: 2021 - Semester 2</p>
