--- a/public/courses/sta33120_stochastic_processes_2020/contentr_stochastic/index.html
+++ b/public/courses/sta33120_stochastic_processes_2020/contentr_stochastic/index.html
@@ -528,6 +528,11 @@ Week 7 - 8   Poisson Process (cont."><meta property="og:image" content="/img/ico
   
   
   
+  <div class="docs-toc-item">
+    <a class="docs-toc-link" href="/courses/statisticalconsultancy/contentr_stochastic/">https://thiyanga.netlify.app/courses/statisticalconsultancy/</a>
+
+  </div>
+  
   <div class="docs-toc-item active">
     <a class="docs-toc-link" href="/courses/sta33120_stochastic_processes_2020/contentr_stochastic/">📚</a>
 
