--- a/public/courses/sta33120_stochastic_processes_2020/index.html
+++ b/public/courses/sta33120_stochastic_processes_2020/index.html
@@ -518,6 +518,11 @@
   
   
   <div class="docs-toc-item">
+    <a class="docs-toc-link" href="/courses/statisticalconsultancy/contentr_stochastic/">https://thiyanga.netlify.app/courses/statisticalconsultancy/</a>
+
+  </div>
+  
+  <div class="docs-toc-item">
     <a class="docs-toc-link" href="/courses/sta33120_stochastic_processes_2020/contentr_stochastic/">📚</a>
 
   </div>
