--- a/public/courses/statisticalconsultancy/contentr_stochastic/index.html
+++ b/public/courses/statisticalconsultancy/contentr_stochastic/index.html
@@ -120,7 +120,7 @@
   
   <meta property="og:site_name" content="THIYANGA TALAGALA">
   <meta property="og:url" content="/courses/statisticalconsultancy/contentr_stochastic/">
-  <meta property="og:title" content="STA 331 2.0 Stochastic Processes | THIYANGA TALAGALA">
+  <meta property="og:title" content="STA 474 2.0 Statistical Consultancy | THIYANGA TALAGALA">
   <meta property="og:description" content=""><meta property="og:image" content="/img/icon-192.png">
   <meta property="twitter:image" content="/img/icon-192.png"><meta property="og:locale" content="en-us">
   
@@ -146,7 +146,7 @@
 
 
 
-  <title>STA 331 2.0 Stochastic Processes | THIYANGA TALAGALA</title>
+  <title>STA 474 2.0 Statistical Consultancy | THIYANGA TALAGALA</title>
 
 </head>
 
@@ -520,6 +520,11 @@
   
   
   
+  <div class="docs-toc-item active">
+    <a class="docs-toc-link" href="/courses/statisticalconsultancy/contentr_stochastic/">https://thiyanga.netlify.app/courses/statisticalconsultancy/</a>
+
+  </div>
+  
   <div class="docs-toc-item">
     <a class="docs-toc-link" href="/courses/sta33120_stochastic_processes_2020/contentr_stochastic/">📚</a>
 
@@ -552,7 +557,7 @@
       <article class="article">
 
         <div class="docs-article-container">
-          <h1>STA 331 2.0 Stochastic Processes</h1>
+          <h1>STA 474 2.0 Statistical Consultancy</h1>
 
           <div class="article-style">
             
