--- a/public/courses/sta33120_stochastic_processes_2020/contentr_stochastic/index.html
+++ b/public/courses/sta33120_stochastic_processes_2020/contentr_stochastic/index.html
@@ -529,7 +529,7 @@ Week 7 - 8   Poisson Process (cont."><meta property="og:image" content="/img/ico
   
   
   <div class="docs-toc-item">
-    <a class="docs-toc-link" href="/courses/statisticalconsultancy/contentcon/">https://thiyanga.netlify.app/courses/statisticalconsultancy/</a>
+    <a class="docs-toc-link" href="/courses/statisticalconsultancy/contentcon/">STA 474 2.0 Statistical Consultancy</a>
 
   </div>
   
