--- a/public/courses/index.html
+++ b/public/courses/index.html
@@ -531,10 +531,9 @@
 <p><a href="https://stochasticprocesses.netlify.app/">STA 331 2.0 Stochastic Processes</a></p>
 </li>
 <li>
-<p><a href="https://scs-fas-sjp.netlify.app/">STA 474 2.0 Statistical Consultancy</a></p>
+<p><a href="https://scs-fas-sjp.netlify.app/">STA 474 2.0 Statistical Consultancy</a> | <a href="https://thiyanga.netlify.app/courses/statisticalconsultancy/">Course information</a></p>
 </li>
 </ul>
-<p><a href="https://thiyanga.netlify.app/courses/statisticalconsultancy/">Course information</a></p>
 <p>MSc in Applied Statistics</p>
 <ul>
 <li>STA 529 2.0 Data Mining</li>
