--- a/public/courses/statisticalconsultancy/index.html
+++ b/public/courses/statisticalconsultancy/index.html
@@ -572,7 +572,11 @@
 <p>Office hours: Tuesday 3:00pm – 4:00pm. Email me for other times.</p>
 <p>E-mail is the best way to get in contact with me—I will respond to all course-related e-mails within 24 hours.</p>
 <h1 id="tools-to-consultants">Tools: To consultants</h1>
-<p>Project log form:</p>
+<p><strong>1. Slides</strong></p>
+<p><a href="https://thiyangt.github.io/statconsultancy/#1">Click here</a></p>
+<p><strong>2. Gitrepo</strong></p>
+<p><a href="https://github.com/thiyangt/statconsultancy">Click here</a></p>
+<p><strong>3. Project log form</strong></p>
 <p><a href="/SCS/template_logform.pdf">pdf</a></p>
 <p><a href="/SCS/template_logform.Rmd">rmd</a></p>
 <h1 id="tools-to-clients">Tools: To clients</h1>
