--- a/public/project/medlea/index.html
+++ b/public/project/medlea/index.html
@@ -652,10 +652,22 @@ sensory or olfactory senses. The other method of recognizing these plants involv
 based testing, which requires trained skills, data interpretation which is costly and time-intensive. Automatic ways to identify medicinal plants are useful especially for those that are lacking experience in herbal recognition. We introduce a computationally efficient new algorithm for medicinal plant classification.  We
 refer to our medicinal plant classification algorithm as MEDIPI : MEDIicinal Plant
 Identification. MEDIPI
-contains two main phases (i) The offline phase, and (ii) The online phase. The algorithm operates on a set of interpretable features computed from the images.  Figure 3 provides an overview of our algorithm.</p>
+contains two main phases (i) The offline phase, and (ii) The online phase. The algorithm operates on a set of interpretable features (see Figure 4) computed from the leaf images.  Figure 3 provides an overview of our algorithm.</p>
 <p><img src="medipi.png" alt=""></p>
 <p>Figure 3: Overview of MEDIPI algorithm</p>
+<p><img src="sh_f.png" alt=""></p>
+<p>Figure 4: Leaf image features</p>
 <p>This work is a part of <a href="https://www.linkedin.com/in/jayani-lakshika-9a0297162/">Jayani P G Lakshika</a> BSc (Hons) Degree in Statistics thesis - 2021, which was supervised by me.</p>
+<h2 id="research-outputs">Research outputs</h2>
+<p><strong>Papers</strong></p>
+<p><a href="https://arxiv.org/abs/2106.08077">Lakshika, J. P., &amp; Talagala, T. S. (2021). Computer-aided Interpretable Features for Leaf Image Classification. arXiv preprint arXiv:2106.08077.</a></p>
+<p><strong>Software</strong></p>
+<p>[Jayani P. G. Lakshika and Thiyanga S. Talagala (2021). MedLEA: Morphological and Structural Features of Medicinal Leaves. R package version 1.0.1.
+https://CRAN.R-project.org/package=MedLEA</p>
+<p><a href="https://CRAN.R-project.org/package=MedLEA"><img src="http://www.r-pkg.org/badges/version/MedLEA" alt="CRAN\_Status\_Badge"></a>
+<a href="https://cran.r-project.org/package=MedLEA"><img src="http://cranlogs.r-pkg.org/badges/MedLEA" alt="Downloads"></a></p>
+<p><strong>Conference talks</strong></p>
+<p><a href="https://www.youtube.com/channel/UCqfu75XVtV4s-W5aiw1tavQ">Click here</a></p>
 
     </div>
 
