--- a/public/project/medlea/index.html
+++ b/public/project/medlea/index.html
@@ -628,24 +628,7 @@
   <div class="article-container">
 
     <div class="article-style">
-      <h1 id="benchmark-dataset-for-plant-leaves-classification">Benchmark dataset for plant leaves classification</h1>
-<p>Researchers usually struggle and spend a lot of time
-establishing a database by gathering many leaf samples as raw data. By sharing our database we
-provide a training/test database to other researchers to develop new algorithms or to evaluate their algorithms. Furthermore,  data
-sharing encourages more connections and collaboration between scientists, which leads to better decision-making.</p>
-<h2 id="r-software-package-medlea-medicinal-leaf">R Software Package <code>MedLEA</code>: <strong>Med</strong>icinal <strong>LEA</strong>f</h2>
-<p>The <a href="https://github.com/SMART-Research/MedLEA">MedLEA</a> package provides two datasets.</p>
-<p>i) A dataset of morphological and structural features of 471 medicinal plant leaves. The features of each species are recorded by manually viewing the medicinal plant repository available at (<a href="http://www.instituteofayurveda.org/plants/">http://www.instituteofayurveda.org/plants/</a>). For more information visit at <a href="https://github.com/SMART-Research/MedLEA">https://github.com/SMART-Research/MedLEA</a>.</p>
-<p><img src="leaf.png" alt=""></p>
-<p>Figure 1:  Some morphological characteristics of profiles</p>
-<p>ii) Leaf image data set:  A database of leaf images of medicinal plants in Sri Lanka is
-not yet available. Hence, through this research, we establish a repository of medicinal
-plant images. This repository contains 1099 leaf images of 31 species. There are 29-45 images per species.</p>
-<p><img src="imgleaf.png" alt=""></p>
-<p>Figure 2: Few samples from the MedLEA images</p>
-<p>You can get access to the data set via the MedLEA package.</p>
-<pre tabindex="0"><code class="language-{r," data-lang="{r,">install.packages(&quot;MedLEA&quot;)
-</code></pre><h1 id="algorithm-for-leaves-classification">Algorithm for leaves classification</h1>
+      <h1 id="algorithm-for-leaves-classification">Algorithm for leaves classification</h1>
 <h2 id="medipi-mediicinal-plant-identification-algorithm">MEDIPI (<strong>MEDI</strong>icinal <strong>P</strong>lant <strong>I</strong>dentification) algorithm</h2>
 <p>Medicinal plants are usually identified by practitioners based on years of experience through
 sensory or olfactory senses. The other method of recognizing these plants involves Laboratory-
@@ -654,13 +637,29 @@ refer to our medicinal plant classification algorithm as MEDIPI : MEDIicinal Pla
 Identification. MEDIPI
 contains two main phases (i) The offline phase, and (ii) The online phase. The algorithm operates on a set of interpretable features (see Figure 4) computed from the leaf images.  Figure 3 provides an overview of our algorithm.</p>
 <p><img src="medipi.png" alt=""></p>
-<p>Figure 3: Overview of MEDIPI algorithm</p>
+<p>Figure 1: Overview of MEDIPI algorithm</p>
 <p><img src="sh_f.png" alt=""></p>
-<p>Figure 4: Leaf image features</p>
-<p>This work is a part of <a href="https://www.linkedin.com/in/jayani-lakshika-9a0297162/">Jayani P G Lakshika</a> BSc (Hons) Degree in Statistics thesis - 2021, which was supervised by me.</p>
-<h2 id="research-outputs">Research outputs</h2>
+<p>Figure 2: Leaf image features</p>
+<h1 id="benchmark-dataset-for-plant-leaves-classification">Benchmark dataset for plant leaves classification</h1>
+<p>Researchers usually struggle and spend a lot of time
+establishing a database by gathering many leaf samples as raw data. By sharing our database we
+provide a training/test database to other researchers to develop new algorithms or to evaluate their algorithms. Furthermore,  data
+sharing encourages more connections and collaboration between scientists, which leads to better decision-making.</p>
+<h2 id="r-software-package-medlea-medicinal-leaf">R Software Package <code>MedLEA</code>: <strong>Med</strong>icinal <strong>LEA</strong>f</h2>
+<p>The <a href="https://github.com/SMART-Research/MedLEA">MedLEA</a> package provides two datasets.</p>
+<p>i) A dataset of morphological and structural features of 471 medicinal plant leaves. The features of each species are recorded by manually viewing the medicinal plant repository available at (<a href="http://www.instituteofayurveda.org/plants/">http://www.instituteofayurveda.org/plants/</a>). For more information visit at <a href="https://github.com/SMART-Research/MedLEA">https://github.com/SMART-Research/MedLEA</a>.</p>
+<p><img src="leaf.png" alt=""></p>
+<p>Figure 3:  Some morphological characteristics of profiles</p>
+<p>ii) Leaf image data set:  A database of leaf images of medicinal plants in Sri Lanka is
+not yet available. Hence, through this research, we establish a repository of medicinal
+plant images. This repository contains 1099 leaf images of 31 species. There are 29-45 images per species.</p>
+<p><img src="imgleaf.png" alt=""></p>
+<p>Figure 4: Few samples from the MedLEA images</p>
+<p>You can get access to the data set via the MedLEA package.</p>
+<pre tabindex="0"><code class="language-{r," data-lang="{r,">install.packages(&quot;MedLEA&quot;)
+</code></pre><h2 id="research-outputs">Research outputs</h2>
 <p><strong>Papers</strong></p>
-<p><a href="https://arxiv.org/abs/2106.08077">Lakshika, J. P., &amp; Talagala, T. S. (2021). Computer-aided Interpretable Features for Leaf Image Classification. arXiv preprint arXiv:2106.08077.</a></p>
+<p>Lakshika, J. P., &amp; Talagala, T. S. (2021). Computer-aided Interpretable Features for Leaf Image Classification. arXiv preprint arXiv:2106.08077.](<a href="https://arxiv.org/abs/2106.08077">https://arxiv.org/abs/2106.08077</a>)</p>
 <p><strong>Software</strong></p>
 <p>[Jayani P. G. Lakshika and Thiyanga S. Talagala (2021). MedLEA: Morphological and Structural Features of Medicinal Leaves. R package version 1.0.1.
 https://CRAN.R-project.org/package=MedLEA</p>
@@ -668,6 +667,9 @@ https://CRAN.R-project.org/package=MedLEA</p>
 <a href="https://cran.r-project.org/package=MedLEA"><img src="http://cranlogs.r-pkg.org/badges/MedLEA" alt="Downloads"></a></p>
 <p><strong>Conference talks</strong></p>
 <p><a href="https://www.youtube.com/channel/UCqfu75XVtV4s-W5aiw1tavQ">Click here</a></p>
+<p><strong>Research reproducibility</strong></p>
+<p>R codes and data to reproduce the results in the paper &ldquo;Computer-aided Interpretable Features for Leaf Image Classification&rdquo; available at <a href="https://github.com/SMART-Research/leaffeatures_paper">https://github.com/SMART-Research/leaffeatures_paper</a></p>
+<p>This work is a part of <a href="https://www.linkedin.com/in/jayani-lakshika-9a0297162/">Jayani P G Lakshika</a> BSc (Hons) Degree in Statistics thesis - 2021, which was supervised by me.</p>
 
     </div>
 
