--- a/public/project/medlea/index.html
+++ b/public/project/medlea/index.html
@@ -635,11 +635,13 @@ sensory or olfactory senses. The other method of recognizing these plants involv
 based testing, which requires trained skills, data interpretation which is costly and time-intensive. Automatic ways to identify medicinal plants are useful especially for those that are lacking experience in herbal recognition. We introduce a computationally efficient new algorithm for medicinal plant classification.  We
 refer to our medicinal plant classification algorithm as MEDIPI : MEDIicinal Plant
 Identification. MEDIPI
-contains two main phases (i) The offline phase, and (ii) The online phase. The algorithm operates on a set of interpretable features (see Figure 4) computed from the leaf images.  Figure 3 provides an overview of our algorithm.</p>
+contains two main phases (i) The offline phase, and (ii) The online phase. The algorithm operates on a set of interpretable features  computed from the leaf images. The offline phase of the algorithm contains 4 main steps: i) image processing, ii) feature extraction, iii) train a algorithm. Figure 1 provides an overview of our algorithm. Figure 2 provides a selected set of features we use in the algorithm. The image processing steps are shown in Figure 3.</p>
 <p><img src="medipi.png" alt=""></p>
 <p>Figure 1: Overview of MEDIPI algorithm</p>
 <p><img src="sh_f.png" alt=""></p>
 <p>Figure 2: Leaf image features</p>
+<p><img src="image_processing.png" alt=""></p>
+<p>Figure 3: Image processing workflow</p>
 <h1 id="benchmark-dataset-for-plant-leaves-classification">Benchmark dataset for plant leaves classification</h1>
 <p>Researchers usually struggle and spend a lot of time
 establishing a database by gathering many leaf samples as raw data. By sharing our database we
